New fields on Person and Unique index on Mongo
