# src/main/resources/swagger/api.yml
@@ -33,10 +33,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PersonDTO'        
+              $ref: '#/components/schemas/PersonDTO'
       responses:
         '201':    # status code
           description: Created
+          content:
+            application/json:
+              schema: 
+                 $ref: '#/components/schemas/PersonGetDTO'
   /people/{id}:
     get:
       operationId: getByPersonId
@@ -56,7 +60,7 @@ paths:
           content:
             application/json:
               schema: 
-                 $ref: '#/components/schemas/PersonDTO'      
+                 $ref: '#/components/schemas/PersonGetDTO'      
     put:
       operationId: updatePerson
       summary: insert one person.
@@ -79,6 +83,10 @@ paths:
       responses:
         '201':    # status code
           description: Created
+          content:
+            application/json:
+              schema: 
+                 $ref: '#/components/schemas/PersonGetDTO'      
     delete:
       operationId: deletePerson
       summary: delete one person.
@@ -110,6 +118,11 @@ paths:
       responses:
         '201':    # status code
           description: Created
+          content:
+            application/json:
+              schema: 
+                 $ref: '#/components/schemas/FarmGetDTO'      
+
   /farms/keyword/{keyword}:
     get:
       operationId: getFarmsByKeyword
@@ -228,6 +241,10 @@ paths:
       responses:
         '201':    # status code
           description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FarmGetDTO'        
     delete:
       operationId: deleteFarm
       summary: delete one Farm.
@@ -251,7 +268,7 @@ components:
           type: string
           minLength: 3
           maxLength: 50
-        lastname:
+        lastName:
           type: string
           minLength: 3
           maxLength: 50
@@ -259,6 +276,27 @@ components:
           type: string
           minLength: 3
           maxLength: 50
+        cpf:
+          type: string
+          minLength: 11
+          maxLength: 11
+        birthDate:
+          type: string
+          format: date
+        phone:
+          type: string
+          minLength: 10
+          maxLength: 11
+        documentId:
+          type: string
+      example:   # Object-level example
+        forename: Adalberto
+        lastName: Silva
+        email: adalberto.xyz@mgn.com.br
+        cpf: 01234567890
+        birthDate: "1998-06-30"
+        phone: "21555553333"
+        documentId: "345465756543"
     PersonGetDTO:
       properties:
         id:
@@ -267,7 +305,7 @@ components:
           type: string
           minLength: 3
           maxLength: 50
-        lastname:
+        lastName:
           type: string
           minLength: 3
           maxLength: 50
@@ -275,6 +313,28 @@ components:
           type: string
           minLength: 3
           maxLength: 50
+        cpf:
+          type: string
+          minLength: 11
+          maxLength: 11
+        birthDate:
+          type: string
+          format: date
+        phone:
+          type: string
+          minLength: 10
+          maxLength: 11
+        documentId:
+          type: string
+      example:   # Object-level example
+        id: 5fd6881a58f4a6569facc867
+        forename: Adalberto
+        lastName: Silva
+        email: adalberto.xyz@mgn.com.br
+        cpf: 01234567890
+        birthDate: "1998-06-30"
+        phone: "21555553333"
+        documentId: "345465756543"
     FarmDTO:
       properties:
         ownerId:
